@@ -1,4 +1,4 @@
-#ident "$Id: lookup_userhome.c,v 1.3 2004/01/29 16:01:22 raven Exp $"
+#ident "$Id: lookup_userhome.c,v 1.4 2004/12/31 06:30:09 raven Exp $"
 /* ----------------------------------------------------------------------- *
  *   
  *  lookup_userhome.c - module for Linux automount to generate symlinks
@@ -36,7 +36,7 @@ int lookup_init(const char *mapfmt, int argc, const char *const *argv, void **co
 	return 0;		/* Nothing to do */
 }
 
-int lookup_ghost(const char *root, int ghost, void *context)
+int lookup_ghost(const char *root, int ghost, time_t now, void *context)
 {
 	return LKP_NOTSUP;
 }
