@@ -46,6 +46,8 @@ xx/xx/2004 autofs-4.1.4
 - merge fix for program maps returning larger than 4kb (Jeff Moyer).
 - fix trailing white space not removed from map entries not containing a colon.
 - merge remaining bits of Debian and Redhat init script patches.
+- fix duplicate map entry order - return first read instead of last.
+
 
 19/05/2004 autofs-4.1.3
 -----------------------
